namespace Lanes
{
    enum class LaneManagerState {
        FLOW,
        STOPPING,
        STOPPED
    };
}